--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load',()=>{
+          navigator.serviceWorker.register("./serviceWorker.js").then(()=>{
+            console.log("Worker Registered");            
+          }).catch((e)=>{
+            console.log("Error in Service Worker",e);
+          })
+        })
+      }
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
