--- a/index.html
+++ b/index.html
@@ -4,21 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/whitebglogo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Sittner Trucking LLC</title>
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load',()=>{
-          navigator.serviceWorker.register("./serviceWorker.js").then(()=>{
-            console.log("Worker Registered");            
-          }).catch((e)=>{
-            console.log("Error in Service Worker",e);
-          })
-        })
-      }
-    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
