--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   </head>
   <body>
     <div id="root"></div>
+
+   <script>
+    if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('./service-worker.js') 
+      .then((registration) => {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      })
+      .catch((error) => {
+        console.log('ServiceWorker registration failed: ', error);
+      });
+  });
+}
+
+   </script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
