--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <script>
     if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/firebase-messaging-sw.js')
     navigator.serviceWorker.register('/service-worker.js')
       .then((registration) => {
         console.log('ServiceWorker registration successful with scope: ', registration.scope);
@@ -21,8 +22,12 @@
       .catch((error) => {
         console.log('ServiceWorker registration failed: ', error);
       });
+      
   });
 }
+
+
+      
 
    </script>
 
